Firefox incorrectly treats flex items' heights as definite if they have `overflow: {scroll, hidden,auto}`, in vertical indefinite-height flex container
Categories
(Core :: Layout: Flexbox, defect, P3)
Tracking
()
Tracking | Status | |
---|---|---|
firefox93 | --- | fixed |
People
(Reporter: dholbert, Assigned: TYLin)
References
Details
Attachments
(2 files)
STR:
- Load attached testcase.
EXPECTED RESULTS:
No orange in any of the subtests (aside from the scrollbar tracks in the middle two subtests, which might show orange)
ACTUAL RESULTS:
The first three subtests are orange on their bottom half.
This indicates that we're treating the flex item's resolved main-size (height) as "definite" in these overflow:{hidden,auto,scroll}
cases (but not in the fourth case, where the flex item has overflow:visible
).
It seems we're misapplying "point 2" from https://drafts.csswg.org/css-flexbox-1/#definite-sizes here (inadvertently); the flex container has an indefinite height, so we shouldn't be promoting the flex items' main size to be definite.
Chrome gives EXPECTED RESULTS.
Reporter | ||
Comment 1•5 years ago
|
||
I suspect the issue here is that we're failing to propagate mTreatBSizeAsIndefinite
through to the scrolled frame, or something like that.
Reporter | ||
Comment 2•5 years ago
|
||
(CC'ing TYLin in case he's interested in taking a look.)
Comment hidden (obsolete) |
Assignee | ||
Comment 4•4 years ago
|
||
Updated•4 years ago
|
Assignee | ||
Comment 5•4 years ago
|
||
This bug affects YouTube reported in bug 1723448.
Reporter | ||
Comment 7•4 years ago
|
||
(In reply to Ting-Yu Lin [:TYLin] (UTC-7) from comment #5)
This bug affects YouTube reported in bug 1723448.
Given this^, it might be worth nominating this for uplift to beta during the "early beta" period, after it's landed and baked on Nightly for a few days.
(In the pretty-unlikely scenario that it causes some unforeseen layout breakage, and we have to rethink this somehow, then of course it'd be extremely easy & safe to back out from beta at that point, since it's just a single line of code. So: relatively high reward & low risk.)
Comment 10•4 years ago
|
||
bugherder |
Assignee | ||
Comment 12•4 years ago
|
||
(In reply to Daniel Holbert [:dholbert] from comment #7)
(In reply to Ting-Yu Lin [:TYLin] (UTC-7) from comment #5)
This bug affects YouTube reported in bug 1723448.
Given this^, it might be worth nominating this for uplift to beta during the "early beta" period, after it's landed and baked on Nightly for a few days.
Per bug 1723448 comment 7, Youtube seems changed to workaround this bug, so we don't have the pressure to uplift my patch unless we get another webcompat report.
Description
•