Bug 1654044 - Carry mTreatBSizeAsIndefinite flag from scroll frame to scrolled inner frame (-moz-scrolled-content). r=dholbert

Differential Revision: https://phabricator.services.mozilla.com/D122038